--- a/public/drag-and-drop.css
+++ b/public/drag-and-drop.css
@@ -2,8 +2,13 @@
     margin: 2em auto;
     box-sizing: border-box;
     border: 2px dashed var(--navigation-background);
-    height: 200px;
-    width: 500px;
+    height: 100px;
+    width: 400px;
+}
+
+.area-empty,
+.area-filled {
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -20,13 +25,13 @@
 }
 
 .drag-area header {
-    font-size: 2em;
+    font-size: 1.5em;
     font-weight: 500;
     color: var(--navigation-background);
 }
 
 .drag-area span {
-    font-size: 1em;
+    font-size: 0.75em;
     font-weight: 500;
     color: var(--navigation-background);
     margin: 0.5em 0;
@@ -34,7 +39,7 @@
 
 .drag-area button {
     padding: 0.4em 1em;
-    font-size: 1.5em;
+    font-size: 1em;
     font-weight: 500;
     border-radius: 5px;
     border: none;
@@ -42,4 +47,12 @@
     background: var(--navigation-background);
     color: #ffffff;
     cursor: pointer;
+}
+
+.area-filled {
+    display: none;
+}
+
+.area-filled button {
+    margin-top: 1em;
 }
